--- a/.env
+++ b/.env
@@ -81,3 +81,4 @@ TZ="America/Los_Angeles"
 export GREPOPTIONS="-E --color"
 export PATH="$PATH:$HOME/bin"
 export RELTOOLS_CHANNEL=reltools_alpha
+export MAKEOPTS="-j5"
