Added some stuff.

--- a/.env
+++ b/.env
@@ -53,21 +53,7 @@ fi # taken from srobertson's zshrc
 export EDITOR=vim
 
 # Path
-JRE=/opt/java/jre
-JDK=/opt/java/
-export PATH=/bin:/sbin:/usr/local/bin:/usr/local/sbin:/usr/bin:/usr/sbin:$HOME/.scripts:$HOME/.bin:$JRE/bin:$JDK/bin
-#   Add google depot_tools to path
-export PATH=$PATH:$HOME/dev/depot_tools
-# Android SDK
-ANDROID_SDK=$HOME/android-sdk-linux_86
-export PATH=$PATH:$ANDROID_SDK/tools
-
-if [ "$(uname)" = "Darwin" ]; then
-    # MacPorts
-    export PATH=$PATH:/opt/local/bin:/opt/local/sbin:/usr/texbin
-    export MANPATH=/opt/local/share/man:$MANPATH
-    source $HOME/.profile
-elif [ "$(uname)" = "Linux" ]; then
+if [ "$(uname)" = "Linux" ]; then
     export BROWSER="firefox"
 fi
 
