--- a/.env
+++ b/.env
@@ -31,3 +31,4 @@ export GREPOPTIONS="-E --color"
 export PATH="$PATH:$HOME/bin"
 export RELTOOLS_CHANNEL=reltools_alpha
 export MAKEOPTS="-j5"
+export NODE_PATH=/usr/local/lib/node_modules:$NODE_PATH
